--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div class="container">
     <h2>🗺️ Park Explorer</h2>
-    <p>Find U.S. National Parks by State and Activity</p>
+    <p>Find U.S. Parks by State and Activity</p>
 
     <div class="filters">
       <select id="stateSelect">
